                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 27-05-2006 added: localized date/time in directory listings
 - 27-05-2006 fixed: [ 1479058 ] Renaming files/folders on samba shares
 - 27-05-2006 fixed: Invalid temperature assert on boot when temperature control enabled.
 - 27-05-2006 fixed: [ 1493877 ] Problem with weather localisation in swedish
 - 26-05-2006 changed: Skinners can now specify their startup windows and startup.xml will run on all of them.  (Based on patch [ 1482104 ], thanks to lossol93)
 - 26-05-2006 fixed: Python AR in images wasn't working.
 - 26-05-2006 fixed: Parent folder items in My Pictures would sometimes show with their thumb.
 - 26-05-2006 fixed: Filesize parameter didn't return from files played via the httpapi.
 - 26-05-2006 fixed: [ 1490939 ] Playlist filenames are run through the fatx conversion while in UTF8.
 - 25-05-2006 fixed: Infinite loop if the progress dialog was started by the player while in fullscreen before rendering was allowed.
 - 25-05-2006 fixed: DoModal() and Show() on dialogs had to be called with the parent window, even though the information was never used.
 - 25-05-2006 fixed: last.fm directory was broken.
 - 25-05-2006 fixed: forgot to enable subtitles after user browsed for one.
 - 25-05-2006 fixed: Black button for MyVideo playlist was not mapped correctly
 - 25-05-2006 updated: German language file
 - 24-05-2006 fixed: folder.jpg didn't work in Programs or Scripts.
 - 24-05-2006 fixed: [ 1492671 ] .mov no sound with mplayer, CVS now
 - 23-05-2006 added: localization of temperature and speed unit via langinfo.xml
 - 23-05-2006 fixed: [ 1493130 ] XBMC crashes at the end of Apple Lossless files.